# Agentic_LLM

./: README.md  pyproject.toml
ActiveRAG-Next/db/: chroma.sqlite3
app/: docstore.py  embedding.py  llm.py  main.py  metrics.py  rag.py
docs/: architecture.md  evaluation_plan.md  quick_start_guide.md
logs/: latency_baselines.json
src/token_self_repair/: __init__.py  config.py  types.py
src/token_self_repair.egg-info/: PKG-INFO
src/token_self_repair/evaluation/: __init__.py  datasets.py  metrics.py  reasoning_runner.py  repair_runner.py  runner.py
src/token_self_repair/llm/: __init__.py  base.py  mocks.py
src/token_self_repair/messaging/: __init__.py  status.py
src/token_self_repair/pipelines/: __init__.py  base.py  controlflow.py  program_repair.py  repair_agent.py  self_healing.py
src/token_self_repair/repair/: __init__.py  base.py  constitutional.py  multi_level.py
src/token_self_repair/uncertainty/: __init__.py  base.py  logtoku.py
src/token_self_repair/utils/: __init__.py  logging.py  token_ops.py
tests/: test_self_repair.py  test_uncertainty.py
