[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-self-repair"
version = "0.1.0"
description = "Token-level uncertainty driven self-repair for agentic LLM workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Codex Agent"}
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pydantic>=2.6",
  "rich>=13.7",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0"
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.30",
  "pandas>=2.0",
  "altair>=5.0"
]
openai = [
  "openai>=1.30.0",
  "langchain-openai>=0.2.0",
  "ddgs>=1.5.0"
]
llama = [
  "torch>=2.1",
  "transformers>=4.40",
  "sentence-transformers>=2.6"
]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
